# veilpay

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  PLAN.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
app/: package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.module.css  App.tsx  index.css  main.tsx  polyfills.ts
circuits/: veilpay.circom
docs/: privacy.md  required-changes.md  sdk.md
infra/relayer/: .terraform.lock.hcl  README.md  cloud-init.tftpl  main.tf  outputs.tf  terraform.tfstate.1768700275.backup  terraform.tfstate.backup  variables.tf  versions.tf
programs/veilpay/: Cargo.toml
programs/verifier/: Cargo.toml
relayer/: package.json  pnpm-lock.yaml  terraform.tfstate
relayer/src/: app.ts  index.ts
scripts/: admin-bootstrap.ts  anchor-upgrade-devnet.sh  build-circuits.sh  check-verifier-key-match.js  close-devnet-programs.sh  close-programs-interactive.sh  create-relayer-ata.sh  deploy-all-devnet.sh  export-verifier-key-sol.js  export-verifier-key.js  extend-nullifier-lut.ts  gen-proof-json.js  relayer-provision.sh  relayer-redeploy.sh  setup-devnet.sh  test-prover.js  update-all-devnet.sh
sdk/: README.md  package.json  pnpm-lock.yaml
sdk/src/: client.ts  crypto.ts  identity.ts  identityScanner.ts  index.ts  merkle.ts  noteScanner.ts  (+6 more)
tests/: ecies_privacy.ts  relayer.ts  sdk.ts  ui.ts  veilpay.ts  veilpay_e2e.ts
tools/ark-prover/: Cargo.toml
tools/ark-prover/src/: main.rs
tools/groth16-fixture/: Cargo.toml
tools/groth16-fixture/src/: main.rs
ui/: app.js  index.html  styles.css
(+120 files in other folders)
