[package]
name = "ark-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
ark-std = "0.5.0"
num-bigint = "0.4.6"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
