[package]
name = "groth16-fixture"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
ark-std = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-bn254 = "3.2.1"
